# pyCellPhenoX

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  README.md  env.yml  mkdocs.yml  pyproject.toml  requirements.txt
docs/: README.md  conf.py  index.rst  installation.rst  issues.rst  license.rst  modules.rst  pyCellPhenoX.rst  readthedocs.js  requirements.txt  tutorials.rst  walkthroughs
pyCellPhenoX/: CellPhenoX.py  CellPhenoX_script.py  __init__.py  marker_discovery.py  neighborhoodAbundanceMatrix.py  nonnegativeMatrixFactorization.py  plot_interpretablescore_boxplot.py  plot_interpretablescore_umap.py  preprocessing.py  principalComponentAnalysis.py  workflow.ipynb
source/: changelog.rst  code_of_conduct.rst  conf.py  contributing.rst  index.rst  license.rst  modules.rst  pyCellPhenoX.operations.rst  pyCellPhenoX.rst  pyCellPhenoX.utils.rst
src/: CellPhenoX.py  CellPhenoX_script.py  MarkerDiscovery.py  Preprocessing.py  config.yaml  nonnegative_matrix_factorization.py  preprocessing.py  principle_component_analysis.py  workflow.ipynb
test/: __init__.py  test_balanced_sample.py  test_cellphenoX.py  test_check_indicies.py  test_marker_discovery.py  test_nam.py  test_nonnegativeMatrixFactorization.py  test_nonnegative_matrix_factorization.py  test_pca.py  test_plot_intrep_box.py  test_plot_intrep_umap.py  test_preprocessing.py  test_reduceddim.py  test_select_k.py  test_select_num_components.py
utils/: reducedim.py
vignettes/: apply_cellphenoX_inflamed_uc_fibroblast.ipynb  apply_cellphenoX_tnbc.ipynb  test_vignette.ipynb
(+18 files in other folders)
