[tool.poetry]
name = "pyCellPhenoX"
version = "0.2.0"
description = "An eXplainable Cell-specific machine learning method to predict clinical Phenotypes using single-cell multi-omics"
authors = [ 
    "Fan Zhang", 
    "Jade Young",
    "Jun Inamo",
    "Revanth Krishna",
    "Zacary Caterer"
 ]
maintainers = ["Revanth Krishna <revanth.krishna@cuanschutz.edu>"]
license = "MIT license"
readme = "README.md"
homepage = "https://pyCellPhenoX.readthedocs.io/"
repository = "https://github.com/fanzhanglab/pyCellPhenoX"
include = [{ path = "poetry.lock", format = "sdist" }]
packages = [
    { include = "pyCellPhenoX" }
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.0"
xgboost = "^2.1.1"
numba = ">=0.54"
shap = "^0.46.0"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
statsmodels = "^0.14.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
requests = "^2.32.3"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
sphinx = "~7.1"
sphinx-autobuild = "^2021.3.14"
sphinx-autoapi = "^3.0.0"
ipython = "^8.12"
groundwork-sphinx-theme = "^1.1.1"
sphinx-copybutton = "^0.5.2"
nbsphinx = "^0.9.3"
m2r2 = "^0.3.3.post2"
furo = "^2023.9.10"
mock = "^5.1.0"
autodoc = "^0.5.0"
dunamai = "^1.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
